Configuração firebase android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: #^4.3.8
     git: https://github.com/jonataslaw/getx.git
+  firebase_core: ^1.6.0
 
 dev_dependencies:
   flutter_test:
