--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   get: #^4.3.8
     git: https://github.com/jonataslaw/getx.git
   firebase_core: ^1.6.0
+  firebase_auth: ^3.1.1
+  firebase_remote_config: ^0.11.0
 
 dev_dependencies:
   flutter_test:
