--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
   firebase_remote_config: ^0.11.0
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
