--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_remote_config: ^0.11.0
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
