--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^5.1.0
   intl: ^0.17.0
   flutter_rating_stars: ^1.0.3+4
+  cloud_firestore: ^3.1.6
 
 dev_dependencies:
   flutter_test:
